# fypp

./: .codecov.yaml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  bitbucket-pipelines.yml  pyproject.toml  setup.py  tox.ini  tox.toml
.github/workflows/: ci.yaml  release.yaml  step_build-wheel.yaml  step_test.yaml
cmake/: CMakePresets-CI.json  Fypp.cmake  FyppConfig.cmake.in
devtools/: bump-version.py
docs/: Makefile  api.rst  conf.py  examples.rst  fypp.rst  getting-started.rst  index.rst  integration.rst  introduction.rst  preprocessor-language.rst  requirements.in  requirements.txt  various-features.rst
src/: fypp.py
src/fypp/: __init__.py  __main__.py  cli.py  fypp.py
test/: CMakeLists.txt  inimod.py  runtests.sh  test_Fypp.py  test_FyppCmdLineTool.py  test_fypp.py
test/cmake/: CMakeLists.txt
test/cmake/module/: CMakeLists.txt
test/cmake/module/fypp/: CMakeLists.txt
test/cmake/src/: test_bare.f90  test_exec.fypp  test_obj.fypp  test_shared.fypp  test_static.fypp
test/include/: assert.inc  caseconv.py  escaped_includes.inc  fypp1.inc  getpredefvars.py  getx-init.py  getx.py  getx2.py  importini.py  inimod2.py  multi_includes.inc  setx.py
test/input/: filevarroot.fypp  filevarroot.inc
tools/waf/: fortran_fypp.py  fypp_fortran.py  fypp_preprocessor.py
utils/: bump-version.py
