[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fypp"
description = "Python powered Fortran preprocessor"
dynamic = ["version"]
authors = [
    { name = "Bálint Aradi", email = "aradi@uni-bremen.de" },
]
requires-python = ">=3.5"
license = { text = "BSD-2-Clause" }
license-files = { paths = ["LICENSE.txt"] }
readme = "README.rst"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Pre-processors',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords=[
    "fortran",
    "metaprogramming",
    "pre-processor",
]

[project.urls]
homepage = "https://github.com/aradi/fypp"
documentation = "https://fypp.readthedocs.io/"
repository = "https://github.com/aradi/fypp"

[project.scripts]
fypp = "fypp.cli:run_fypp"

[project.optional-dependencies]
test = [
    "pytest",
]
test-cov = [
    "fypp[test]",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    "fypp[test]",
]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/fypp/_version.py"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py34, py35, py36, py37, py38, py39

    [testenv]
    skip_missing_interpreters =
    true
    setenv =
    PYTHONPATH = {toxinidir}/src
    changedir=test
    commands=python test_fypp.py
"""
