[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fypp"
version = "3.2"
dependencies = []
requires-python = ">=3.7"
authors = [{name = "Bálint Aradi", email = "aradi@uni-bremen.de"},]
maintainers = [{name = "Bálint Aradi", email = "aradi@uni-bremen.de"},]
description = "Python powered Fortran preprocessor"
readme = "README.rst"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
keywords = ["fortran", "meta-programming", "preprocessor"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://fypp.readthedocs.io"
Documentation = "https://fypp.readthedocs.io/en/latest/"
Repository = "https://github.com/aradi/fypp.git"
Changelog = "https://github.com/aradi/fypp/blob/main/CHANGELOG.rst"

[project.scripts]
fypp = "fypp:run_fypp"

[tool.hatch.build]
packages = ["src/fypp.py"]
